2008 02 20
Added png.

2008 02 10
Added rtp (see comments in rtp.pat).

2008 01 16
Fixed and updated flash.  Added mp3.  Added possibly useful comments to kugoo.

2008 01 09
Fixed typo in skypeout.  This should slightly improve detection and prevent
a warning message.

2007 11 22
Added battlefield2142.

2007 11 03
Simplified imesh pattern in an attempt to avoid the kernel crash that 
some people have reported (but that I have not been able to duplicate).

Improved shoutcast pattern.  Now should actually work.

Reclassified imap, pop3, vnc, and irc to great.  (These haven't changed 
in a long time, I think I understand them quite well, and I've heard no 
complaints.)  Downgraded freenet to poor, since it almost certainly 
doesn't work (but I haven't retested it).

2007 10 10
Added liveforspeed.

2007 10 03
Added teamfortress2.  Fixed name of http-freshdownload.  Removed symlink 
tls.pat --> ssl.pat because it will be rejected when it checks the name.
Updated some comments.  Re-benchmarked all patterns and updated meta-info
in files.  Set boundaries for my 450MHz PIII at:

* Very fast: 0–2 seconds.
* Fast: 2–8 seconds.
* Not so fast: 8–100 seconds.
* Slow: >100 seconds

2007 07 27
Added documentation to ftp.  Added armagetron.

2007 06 22
Added replaytv-ivs.

2007 05 09
Fixed smtp pattern for userspace.

2007 01 14
Added cimd and chikka.  Added chikka data to testing suite.  Tweaks to testing
suite.

2007 01 13
Updated test suite for new pattern format.

Marked skypeout as an overmatch.

2007 01 08
Slightly improved performance of bittorrent pattern.  Fixed comment in 
msn-filetransfer.  Added userspace pattern format lines to smtp and x11.
The testing suite does NOT yet understand this format.

2007 01 04
Renamed testing to unset.

2007 01 03
Added radmin.

2006 12 12
Fixed some bugs in the testing programs.  Made rtf and skypeout valid 
for both henry and gnu.

2006 12 11
Reduced equifax part of validcertssl to just "equifax secure" and made 