@@ -2,6 +2,8 @@
 # Pattern attributes: good fast notsofast subset
 # Protocol groups: file
 
+# Contributed by Radovan Josth.  Tested at least a bit.
+
 png
 # drawn from /usr/share/magic
 \x89PNG\x0d\x0a\x1a\x0a
